# agentic_fraud_servicing

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: fix.md  steer.md
.claude/skills/: skill-creation.md
doc/: ADR-001-claim-extraction-and-hypothesis-agent.md  DISPUTE_CLAIM_TYPES_STRATEGY.md  FRAUD_CLAIM_TYPES_STRATEGY.md  SCAM_CLAIM_TYPES_STRATEGY.md  copilot-design-review-2026-03-28.md  copilot-workflow.md  copilot_architecture_diagram_brief.md  enterprise-evaluation-readme.md
docs/policies/: dispute_case_checklist.md  fraud_case_checklist.md  general_guidelines.md
reports/: doordash_dashpass_v2.html  doordash_presentation.html
scripts/: export_eval_report.py  export_report.py  extract_transactions.py  run_evaluation.py  run_forked_simulation.py  run_simulation.py  sample_transcript.json  scenario_dispute_to_fraud.py  scenario_doordash_dashpass.py  scenario_doordash_dashpass_v2.py  scenario_doordash_fraud.py  scenario_highrisk_merchant.py  scenario_scam_techvault.py  simulation_data.py
src/agentic_fraud_servicing/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/integration/: test_copilot_flow.py  test_evaluation_flow.py  test_investigator_flow.py
tests/unit/: test_allegation_quality.py  test_allegations.py  test_auth_agent.py  test_bedrock_provider.py  test_case.py  test_case_advisor.py  test_case_store.py  test_case_writer.py  test_claims.py  test_cli.py  test_compliance_tools.py  (+40 more)
visualization/: .gitignore  package-lock.json  package.json  server.js
(+88 files in other folders)
